--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -16,17 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
+    "import catboost\n",
+    "from sklearn import model_selection, metrics\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +295,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +533,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,39 +544,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "PassengerId      int64\n",
-       "Survived         int64\n",
-       "Pclass           int64\n",
-       "Name            object\n",
-       "Sex             object\n",
-       "Age            float64\n",
-       "SibSp            int64\n",
-       "Parch            int64\n",
-       "Ticket          object\n",
-       "Fare           float64\n",
-       "Cabin           object\n",
-       "Embarked        object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PassengerId      int64\n",
+      "Survived         int64\n",
+      "Pclass           int64\n",
+      "Name            object\n",
+      "Sex             object\n",
+      "Age            float64\n",
+      "SibSp            int64\n",
+      "Parch            int64\n",
+      "Ticket          object\n",
+      "Fare           float64\n",
+      "Cabin           object\n",
+      "Embarked        object\n",
+      "dtype: object\n"
+     ]
     }
    ],
    "source": [
-    "train.dtypes"
+    "print(train.dtypes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PassengerId      int64\n",
+      "Pclass           int64\n",
+      "Name            object\n",
+      "Sex             object\n",
+      "Age            float64\n",
+      "SibSp            int64\n",
+      "Parch            int64\n",
+      "Ticket          object\n",
+      "Fare           float64\n",
+      "Cabin           object\n",
+      "Embarked        object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Já podemos observar que o modelo de teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +748,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +768,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,17 +785,165 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Modelagem"
+    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\"]\n",
+    "\n",
+    "y_train = train['Survived']\n",
+    "X_train = pd.get_dummies(train[features])\n",
+    "X_test = pd.get_dummies(test[features])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métricas"
+    "## Modelagem e avaliação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Pclass  SibSp  Parch  Sex_female  Sex_male\n",
+      "0         3      1      0       False      True\n",
+      "1         1      1      0        True     False\n",
+      "2         3      0      0        True     False\n",
+      "3         1      1      0        True     False\n",
+      "4         3      0      0       False      True\n",
+      "..      ...    ...    ...         ...       ...\n",
+      "886       2      0      0       False      True\n",
+      "887       1      0      0        True     False\n",
+      "888       3      1      2        True     False\n",
+      "889       1      0      0       False      True\n",
+      "890       3      0      0       False      True\n",
+      "\n",
+      "[891 rows x 5 columns]\n",
+      "0      0\n",
+      "1      1\n",
+      "2      1\n",
+      "3      1\n",
+      "4      0\n",
+      "      ..\n",
+      "886    0\n",
+      "887    1\n",
+      "888    0\n",
+      "889    1\n",
+      "890    0\n",
+      "Name: Survived, Length: 891, dtype: int64\n",
+      "     Pclass  SibSp  Parch  Sex_female  Sex_male\n",
+      "0         3      0      0       False      True\n",
+      "1         3      1      0        True     False\n",
+      "2         2      0      0       False      True\n",
+      "3         3      0      0       False      True\n",
+      "4         3      1      1        True     False\n",
+      "..      ...    ...    ...         ...       ...\n",
+      "413       3      0      0       False      True\n",
+      "414       1      0      0        True     False\n",
+      "415       3      0      0       False      True\n",
+      "416       3      0      0       False      True\n",
+      "417       3      1      1       False      True\n",
+      "\n",
+      "[418 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train)\n",
+    "print(y_train)\n",
+    "print(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "model.fit(X_train, y_train)\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "output = pd.DataFrame({'PassengerId': test.PassengerId, 'Survived': predictions})\n",
+    "output.to_csv('datasets/my_submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model.pkl']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, 'model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy_calc(algr, X_train, y_train, vc):\n",
+    "    modelo = algr.fit(X_train, y_train)\n",
+    "    acuracia = round(modelo.score(X_train, y_train) * 100, 2)\n",
+    "    \n",
+    "    train_pred = model_selection.cross_val_predict(algr, X_train, y_train, cv = vc, n_jobs = -1)    \n",
+    "    acuracia_vc = round(metrics.accuracy_score(y_train, train_pred) * 100, 2)\n",
+    "    \n",
+    "    return acuracia, acuracia_vc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 81.59\n",
+      "Acurácia VC: 79.12\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc, acc_vc = accuracy_calc(RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1), X_train, y_train, 10)\n",
+    "\n",
+    "print(\"Acurácia: %s\" % acc)\n",
+    "print(\"Acurácia VC: %s\" % acc_vc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc, acc_vc = accuracy_calc(KNeighborsClassifier(), X_train, y_train, 10)\n",
+    "\n",
+    "print(\"Acurácia: %s\" % acc)\n",
+    "print(\"Acurácia VC: %s\" % acc_vc)"
    ]
   }
  ],
