features: evaluation and save model

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,6 @@
     "import pandas as pd\n",
     "import joblib\n",
     "\n",
-    "import catboost\n",
     "from sklearn import model_selection, metrics\n",
     "from sklearn import model_selection\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +294,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +532,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +747,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +767,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,101 +804,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 105,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Pclass  SibSp  Parch  Sex_female  Sex_male\n",
-      "0         3      1      0       False      True\n",
-      "1         1      1      0        True     False\n",
-      "2         3      0      0        True     False\n",
-      "3         1      1      0        True     False\n",
-      "4         3      0      0       False      True\n",
-      "..      ...    ...    ...         ...       ...\n",
-      "886       2      0      0       False      True\n",
-      "887       1      0      0        True     False\n",
-      "888       3      1      2        True     False\n",
-      "889       1      0      0       False      True\n",
-      "890       3      0      0       False      True\n",
-      "\n",
-      "[891 rows x 5 columns]\n",
-      "0      0\n",
-      "1      1\n",
-      "2      1\n",
-      "3      1\n",
-      "4      0\n",
-      "      ..\n",
-      "886    0\n",
-      "887    1\n",
-      "888    0\n",
-      "889    1\n",
-      "890    0\n",
-      "Name: Survived, Length: 891, dtype: int64\n",
-      "     Pclass  SibSp  Parch  Sex_female  Sex_male\n",
-      "0         3      0      0       False      True\n",
-      "1         3      1      0        True     False\n",
-      "2         2      0      0       False      True\n",
-      "3         3      0      0       False      True\n",
-      "4         3      1      1        True     False\n",
-      "..      ...    ...    ...         ...       ...\n",
-      "413       3      0      0       False      True\n",
-      "414       1      0      0        True     False\n",
-      "415       3      0      0       False      True\n",
-      "416       3      0      0       False      True\n",
-      "417       3      1      1       False      True\n",
-      "\n",
-      "[418 rows x 5 columns]\n"
-     ]
-    }
-   ],
    "source": [
-    "print(X_train)\n",
-    "print(y_train)\n",
-    "print(X_test)"
+    "Para escolher um modelo com maior acurácia, foi utilizada da função abaixo para retornar a acurácia e acurácia validação cruzada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
-    "model.fit(X_train, y_train)\n",
-    "predictions = model.predict(X_test)\n",
-    "\n",
-    "output = pd.DataFrame({'PassengerId': test.PassengerId, 'Survived': predictions})\n",
-    "output.to_csv('datasets/my_submission.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['model.pkl']"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "joblib.dump(model, 'model.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +841,8 @@
     }
    ],
    "source": [
-    "acc, acc_vc = accuracy_calc(RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1), X_train, y_train, 10)\n",
+    "random_forest_model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "acc, acc_vc = accuracy_calc(random_forest_model, X_train, y_train, 10)\n",
     "\n",
     "print(\"Acurácia: %s\" % acc)\n",
     "print(\"Acurácia VC: %s\" % acc_vc)"
@@ -936,14 +850,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 80.92\n",
+      "Acurácia VC: 78.56\n"
+     ]
+    }
+   ],
    "source": [
-    "acc, acc_vc = accuracy_calc(KNeighborsClassifier(), X_train, y_train, 10)\n",
+    "knn_model = KNeighborsClassifier(n_neighbors = 5)\n",
+    "acc, acc_vc = accuracy_calc(knn_model, X_train, y_train, 10)\n",
     "\n",
     "print(\"Acurácia: %s\" % acc)\n",
     "print(\"Acurácia VC: %s\" % acc_vc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelo escolhido: **RandomForestClassifier**!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = random_forest_model.predict(X_test)\n",
+    "\n",
+    "# Dataframe to submission on kaggle\n",
+    "output = pd.DataFrame({'PassengerId': test.PassengerId, 'Survived': predictions})\n",
+    "output.to_csv('datasets/my_submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['random_forest_model.pkl']"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(random_forest_model, 'random_forest_model.pkl')"
    ]
   }
  ],
